Fixed overflow-y to only show when appropriate somehow photos.html got corrupted and had the content doubled

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@
 .content-div {
     padding: 10%;
     color: silver;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .social-img {
     width: 300px;
